--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -5,13 +5,14 @@
         <meta charset="UTF-8">
         <link href="base.css" rel="stylesheet">
         <link href="styles.css" rel="stylesheet">
-        <meta name="viewport" content="width=device-width, inital-scale=1">
+        <meta name="viewport" content="width=device-width, inital-scale=1, viewport-fit=cover">
     </head>
     <body class="works_on_smartphone">
 
         <header>
             <nav>
                 <ul>
+                    <li class="logo">&#120082;</li>
                     <li><a href="/file:///D:/Users/munet/OneDrive/Desktop/html_basic/index.html" target="_blank">Home Page</a></li>
                     <li><a href="/file:///D:/Users/munet/OneDrive/Desktop/html_basic/tweets.html" target="_blank">Twitter</a></li>
                 </ul>
