--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -32,7 +32,7 @@
                 <button>REGISTER FOR FREE</button>
             </div>
             <div>
-                <h2>Learn from the pros</h2>
+                <h2><span class="learn">Learn</span> from the pros</h2>
                 <div class="names">
                     <div>
                         <img src="c:\Users\munet\AppData\Local\Temp\d5c36d46-5eec-4e6f-975c-0aa4881a7a3d_2d6ece16dd7ab4ed2701047586bc80f0cb68835c.zip.a3d\CSS Advanced\1.png" alt="image">
@@ -68,7 +68,7 @@
             </div>
         </section>
         <section class="tutorial">
-            <h2>Most popular tutorials</h2>
+            <h2>Most <span class="popular">popular</span> tutorials</h2>
             <div class="smile">
                 <div>
                     <img src="c:\Users\munet\AppData\Local\Temp\df44b4ef-edd9-4469-977e-63a2d1a3bb79_2d6ece16dd7ab4ed2701047586bc80f0cb68835c.zip.b79\CSS Advanced\9.png" alt="image">
@@ -122,10 +122,14 @@
                     </div>
                     <p style="color: rgb(197, 116, 226);">8 min</p>
                 </div>
+                <img class="play" src="c:\Users\munet\AppData\Local\Temp\3a3fd904-0eda-4d39-9855-4482d6bfc37b_2d6ece16dd7ab4ed2701047586bc80f0cb68835c.zip.37b\CSS Advanced\play.png" alt="">
+                <img class="playy" src="c:\Users\munet\AppData\Local\Temp\3a3fd904-0eda-4d39-9855-4482d6bfc37b_2d6ece16dd7ab4ed2701047586bc80f0cb68835c.zip.37b\CSS Advanced\play.png" alt="">
+                <img class="playyy" src="c:\Users\munet\AppData\Local\Temp\3a3fd904-0eda-4d39-9855-4482d6bfc37b_2d6ece16dd7ab4ed2701047586bc80f0cb68835c.zip.37b\CSS Advanced\play.png" alt="">
+                <img class="playyyy" src="c:\Users\munet\AppData\Local\Temp\3a3fd904-0eda-4d39-9855-4482d6bfc37b_2d6ece16dd7ab4ed2701047586bc80f0cb68835c.zip.37b\CSS Advanced\play.png" alt="">
             </div>
         </section>
         <section class="membership">
-            <h2>Free membership</h2>
+            <h2><span class="free">Free</span> membership</h2>
             <div class="smiley">
                 <div>
                     <img src="c:\Users\munet\AppData\Local\Temp\43de2881-6776-4397-9c8d-cc721153cedd_2d6ece16dd7ab4ed2701047586bc80f0cb68835c.zip.edd\CSS Advanced\smile.png" alt="">
